Update BActivityThread.java